# cpp-assignment-aigayfullin

./: .gitignore  CMakeLists.txt  README.md
cw/: Makefile
cw/05.03/: main  task1  task1.cpp  task2  task2.cpp
cw/c_str/: main  main.cpp  tempCodeRunnerFile.cpp
cw/control/: task  task.cpp  task.md  test  test.cpp
cw/control_preparing/: main  main.cpp  memory_leak.cpp  task.txt  tempCodeRunnerFile.cpp
cw/dynamic_library/: commands.md  main  main.cpp  myLabrary.cpp  myLabrary.h
cw/file_processor/: FileProcessor  FileProcessor.cpp  digits.txt
cw/my_exception/: custom_exception  custom_exception.cpp
cw/my_vector/: myvector.cpp
cw/oop/: main.cpp  product  product.cpp  product.h
cw/read_binary_files/cw12/: CMakeLists.txt  binary_read_write  binary_read_write.cpp  bindata  bindata2  main  main.cpp
cw/try_catch/: main  task1  task1.cpp  task2  task2.cpp
hw01/src/: hw01.cpp
hw02/src/: hw02  hw02.cpp  tempCodeRunnerFile.cpp
hw03/src/: hw03.cpp  main  main.cpp
hw04/src/: hw04.cpp
hw05/src/: hw05  hw05.cpp
hw05/tests/: hw05_test.cpp
memory/: CMakeLists.txt  cmd.txt  dyn_mem.cpp  heap.cpp  stack.cpp  stack_canary.cpp
